--- a/IBTC-physics-2k3s-latex-vacuum-tube-diodes-triodes.tex
+++ b/IBTC-physics-2k3s-latex-vacuum-tube-diodes-triodes.tex
@@ -13,6 +13,9 @@
 
 \DeclareMathOperator{\Epsilon}{\mathcal{E}}
 
+\usepackage{longtable}
+
+
 \begin{document}
 	% Титульный лист
 	\include{source/title.tex}
