--- a/source/practice.tex
+++ b/source/practice.tex
@@ -21,5 +21,6 @@
 \subsection{Определение коэффициента усиления усилителя}
 % Изучение АЧХ усилителя
 \input{source/practice/5_amplifier_frequency_response_measurement}
+\newpage	
 % Зависимость усиления от сопротивления нагрузки
 \input{source/practice/6_dependence_of_gain_on_load_resistance}                                                               
