--- a/source/practice/1_triode_parameters.tex
+++ b/source/practice/1_triode_parameters.tex
@@ -63,7 +63,7 @@
 	\end{subtable}
 \end{table}
 
-В ходе лабораторного эксперимента проведено снятие статической вольт-амперной характеристики полупроводникового диода. Результаты экспериментальных измерений зависимости анодного тока \(I_a\) от анодного напряжения \(U_a\) представлены в \cref{tab:1a}.
+В ходе лабораторного эксперимента проведено снятие статической вольт-амперной характеристики диода. Результаты экспериментальных измерений зависимости анодного тока \(I_a\) от анодного напряжения \(U_a\) представлены в \cref{tab:1a}.
 
 Дифференциальная крутизна вольт-амперной характеристики \(S\) рассчитана в соответствии с уравнением \cref{eq:2} (см. \cref{app:1}) и занесена в \cref{tab:1b}. Проведенный анализ полученных данных демонстрирует нелинейный характер возрастания крутизны характеристики при увеличении анодного напряжения.
 
