--- a/source/practice/3_anode_characteristics.tex
+++ b/source/practice/3_anode_characteristics.tex
@@ -1,10 +1,11 @@
 \subsubsection{Снятие анодной характеристики}
-Были сняты 4 анодные характеристики для разных напряжений на сетке $U_c$: -4, -2, 0, 2 вольт. Также вычислены их погрешности по формулам  \cref{eq:error:1.2,eq:error:2.1} (см. \cref{app:8,app:9}) и записаны в \cref{tab:4b}.
+Были сняты 4 анодные характеристики для разных напряжений на сетке $U_c$: -4, -2, 0, 2 вольт. Также вычислены их погрешности по формулам  \cref{eq:error:1.2,eq:error:2.1} (см. \cref{app:8,app:9}) и записаны в \cref{tab:4b}. По результатам измерений был построен график $I_a(U_a)$ (\Cref{fig:3}). 
+
 \begin{table}[h]
 	\centering
 	\caption{Снятие анодной характеристики триода}
 	\label{tab:4}
-	\begin{subtable}{0.49\textwidth}
+	\begin{subtable}{0.45\textwidth}
 		\centering
 		\caption{Результаты измерений}
 		\label{tab:4a}
@@ -35,7 +36,7 @@
 		\end{tabular}
 	\end{subtable}
 	\hfill
-	\begin{subtable}{0.49\textwidth}
+	\begin{subtable}{0.45\textwidth}
 		\centering
 		\caption{Погрешности данных \cref{tab:4a}}
 		\label{tab:4b}
@@ -67,6 +68,193 @@
 	\end{subtable}
 \end{table}
 
+Вычислим такие параметры, как: статическая крутизна $S_i$, внутреннее сопротивление $R_i$ и статический коэффициент усиления $\mu$. 
+
+Также вычислим погрешность сеточного напряжения $U_c$:
+\begin{equation} \label{eq:100}
+	\Delta U_{c_{-4}} = 0,005 U_{c_{-4}} + 0,299 = 0,005 \times -4 \, \text{В} + 0,299 = 0,29 \, \mathrm{ \text{В} }
+\end{equation}
+\begin{equation} \label{eq:101}
+	\Delta U_{c_{-2}} = 0,005 U_{c_{-2}} + 0,299 = 0,005 \times -2 \, \text{В} + 0,299 = 0,29 \, \mathrm{ \text{В} }
+\end{equation}
+\begin{equation} \label{eq:102}
+	\Delta U_{c_{0}} = 0,005 U_{c_{0}} + 0,299 = 0,005 \times 0 \, \text{В} + 0,299 = 0,30 \, \mathrm{ \text{В} }
+\end{equation}
+\begin{equation} \label{eq:103}
+	\Delta U_{c_{2}} = 0,005 U_{c_{2}} + 0,299 = 0,005 \times 2 \, \text{В} + 0,299 = 0,31 \, \mathrm{ \text{В} }
+\end{equation}
+
+\begin{table}[h]
+	\centering
+	\caption{Параметры статической крутизны триода}
+	\label{tab:9}
+	\begin{subtable}{0.49\linewidth}
+		\centering
+		\caption{Статическая крутизна}
+		\label{tab:9a}
+		\begin{tabular}{ccccc}
+			\toprule
+			\(U_a\) & \(S_{-4\to-2}\) & \(S_{-2\to0}\) & \(S_{0\to2}\) & \(S_{\text{ср}}\) \\ 
+			В & мА/В & мА/В & мА/В & мА/В \\
+			\midrule
+			10  & --     & --     & 1,64   & --     \\ 
+			20  & --     & --     & 1,83   & --     \\ 
+			30  & --     & 1,62   & 2,06   & --     \\ 
+			40  & --     & 1,98   & 2,24   & --     \\ 
+			50  & --     & 2,32   & 2,35   & --     \\ 
+			60  & 0,89   & 2,54   & 2,52   & 1,98   \\ 
+			70  & 1,24   & 2,76   & 2,63   & 2,21   \\ 
+			80  & 1,55   & 2,95   & 2,74   & 2,41   \\ 
+			90  & 1,83   & 3,14   & 2,85   & 2,61   \\ 
+			100 & 2,12   & 3,28   & 2,92   & 2,77   \\ 
+			110 & 2,35   & 3,43   & 3,00   & 2,93   \\ 
+			120 & 2,53   & 3,34   & --     & --     \\ 
+			130 & 2,71   & 3,72   & --     & --     \\ 
+			140 & 2,86   & --     & --     & --     \\ 
+			\bottomrule
+		\end{tabular}
+	\end{subtable}
+	\begin{subtable}{0.49\linewidth}
+		\centering
+		\caption{Погрешность статической крутизны \(\Delta S_i\), мА/В}
+		\label{tab:9b}
+		\begin{tabular}{cccc}
+			\toprule
+			\(\Delta S_{-4\to-2}\) & \(\Delta S_{-2\to0}\) & \(\Delta S_{0\to2}\) & \(\Delta S_{\text{ср}}\) \\
+			мА/В & мА/В & мА/В & мА/В \\ 
+			\midrule
+			--     & --     & 0,01   & --     \\ 
+			--     & --     & 0,01   & --     \\ 
+			--     & 0,04  & 0,01   & --     \\ 
+			--     & 0,05  & 0,01   & --     \\ 
+			--     & 0,06  & 0,01   & --     \\ 
+			0,14  & 0,06  & 0,02   & 0,04  \\ 
+			0,25  & 0,07  & 0,02   & 0,05  \\ 
+			0,32  & 0,07  & 0,02   & 0,05  \\ 
+			0,38  & 0,07  & 0,02   & 0,05  \\ 
+			0,44  & 0,08  & 0,02   & 0,05  \\ 
+			0,50  & 0,08  & 0,02   & 0,06  \\ 
+			0,56  & 0,08  & --      & --     \\ 
+			0,62  & 0,09  & --      & --     \\ 
+			0,69  & --     & --      & --     \\ 
+			\bottomrule
+		\end{tabular}
+	\end{subtable}
+\end{table}
+\begin{table}[h]
+	\centering
+	\caption{Параметры внутреннего сопротивления триода}
+	\label{tab:10}
+	\begin{subtable}{0.49\linewidth}
+		\centering
+		\caption{Внутреннее сопротивление \(R_i\), кОм}
+		\label{tab:10a}
+		\begin{tabular}{ccccc}
+			\toprule
+			\(U_a\) & \(R_{i,-4\to-2}\) & \(R_{i,-2\to0}\) & \(R_{i,0\to2}\) & \(R_{i,\text{ср}}\) \\ 
+			В & кОм & кОм & кОм & кОм \\
+			\midrule
+			10  & --     & --     & 12,20   & --     \\ 
+			20  & --     & --     & 11,45   & --     \\ 
+			30  & --     & 18,52  & 9,71     & --     \\ 
+			40  & --     & 14,71  & 8,93     & --     \\ 
+			50  & --     & 12,35  & 8,51     & --     \\ 
+			60  & 33,33  & 10,53  & 8,33     & 17,40  \\ 
+			70  & 20,83  & 9,09   & 8,00     & 12,64  \\ 
+			80  & 16,67  & 8,33   & 7,69     & 10,90  \\ 
+			90  & 14,29  & 7,69   & 7,41     & 9,80   \\ 
+			100 & 12,50  & 7,14   & 7,14     & 8,93   \\ 
+			110 & 11,11  & 6,67   & 6,90     & 8,23   \\ 
+			120 & 10,00  & 6,25   & --       & --     \\ 
+			130 & 9,09   & 5,88   & --       & --     \\ 
+			140 & 8,33   & --     & --       & --     \\ 
+			\bottomrule
+		\end{tabular}
+	\end{subtable}
+	\begin{subtable}{0.49\linewidth}
+		\centering
+		\caption{Погрешность внутреннего сопротивления}
+		\label{tab:10b}
+		\begin{tabular}{ccccc}
+			\toprule
+			\(\Delta R_{i,-4\to-2}\) & \(\Delta R_{i,-2\to0}\) & \(\Delta R_{i,0\to2}\) & \(\Delta R_{i,\text{ср}}\) \\
+			кОм & кОм & кОм & кОм \\ 
+			\midrule
+			--     & --     & 0,61   & --     \\ 
+			--     & --     & 0,57   & --     \\ 
+			--     & 0,93   & 0,49   & --     \\ 
+			--     & 0,74   & 0,45   & --     \\ 
+			--     & 0,62   & 0,43   & --     \\ 
+			1,67   & 0,53   & 0,42   & 0,66   \\ 
+			1,04   & 0,45   & 0,40   & 0,43   \\ 
+			0,83   & 0,42   & 0,38   & 0,36   \\ 
+			0,71   & 0,38   & 0,37   & 0,32   \\ 
+			0,63   & 0,36   & 0,36   & 0,28   \\ 
+			0,56   & 0,33   & 0,35   & 0,26   \\ 
+			0,50   & 0,31   & --      & --     \\ 
+			0,45   & 0,29   & --      & --     \\ 
+			0,42   & --     & --      & --     \\ 
+			\bottomrule
+		\end{tabular}
+	\end{subtable}
+\end{table}
+\begin{table}[h]
+	\centering
+	\caption{Параметры статического коэффициента усиления триода}
+	\label{tab:11}
+	\begin{subtable}{0.49\linewidth}
+		\centering
+		\caption{Статический коэффициент усиления \(\mu\)}
+		\label{tab:11a}
+		\begin{tabular}{ccccc}
+			\toprule
+			\(U_a\) & \(\mu_{-4\to-2}\) & \(\mu_{-2\to0}\) & \(\mu_{0\to2}\) & \(\mu_{\text{ср}}\) \\ 
+			В & -- & -- & -- & -- \\
+			\midrule
+			10  & --     & --     & 20,01   & --     \\ 
+			20  & --     & --     & 20,94   & --     \\ 
+			30  & --     & 30,00  & 20,00   & --     \\ 
+			40  & --     & 29,12  & 20,00   & --     \\ 
+			50  & --     & 28,64  & 20,00   & --     \\ 
+			60  & 29,67  & 26,77  & 20,99   & 25,81  \\ 
+			70  & 25,83  & 25,09  & 21,04   & 23,99  \\ 
+			80  & 25,83  & 24,58  & 21,05   & 23,82  \\ 
+			90  & 26,15  & 24,15  & 21,11   & 23,80  \\ 
+			100 & 26,50  & 23,41  & 20,84   & 23,58  \\ 
+			110 & 26,11  & 22,87  & 20,70   & 23,23  \\ 
+			120 & 25,30  & 20,88  & --       & --     \\ 
+			130 & 24,64  & 21,88  & --       & --     \\ 
+			140 & 23,83  & --     & --       & --     \\ 
+			\bottomrule
+		\end{tabular}
+	\end{subtable}
+	\begin{subtable}{0.49\linewidth}
+		\centering
+		\caption{Погрешность статического коэффициента усиления \(\Delta \mu\)}
+		\label{tab:11b}
+		\begin{tabular}{ccccc}
+			\toprule
+			\(\Delta \mu_{-4\to-2}\) & \(\Delta \mu_{-2\to0}\) & \(\Delta \mu_{0\to2}\) & \(\Delta \mu_{\text{ср}}\) \\
+			-- & -- & -- & -- \\
+			\midrule
+			--     & --     & 1,20   & --     \\ 
+			--     & --     & 1,25   & --     \\ 
+			--     & 1,50   & 1,00   & --     \\ 
+			--     & 1,46   & 1,00   & --     \\ 
+			--     & 1,43   & 1,00   & --     \\ 
+			1,48   & 1,34   & 1,05   & 0,96   \\ 
+			1,29   & 1,25   & 1,05   & 0,86   \\ 
+			1,29   & 1,23   & 1,05   & 0,85   \\ 
+			1,31   & 1,21   & 1,06   & 0,86   \\ 
+			1,33   & 1,17   & 1,04   & 0,85   \\ 
+			1,31   & 1,14   & 1,04   & 0,83   \\ 
+			1,27   & 1,04   & --      & --     \\ 
+			1,23   & 1,09   & --      & --     \\ 
+			1,19   & --     & --      & --     \\ 
+			\bottomrule
+		\end{tabular}
+	\end{subtable}
+\end{table}
 
 \begin{figure}[p]
 	\centering
