--- a/source/theory.tex
+++ b/source/theory.tex
@@ -31,16 +31,18 @@
 
 В триоде анодный ток зависит как от напряжения на сетке, так и от напряжения на аноде \( I_e = f(U_c, U_d) \). Эта зависимость (при постоянной температуре катода \( T_h = \mathrm{const} \)) изображается обычно в виде двух семейств статических характеристик (статическими они называются потому, что снимаются на постоянном токе)
 \[ I_a = f_1 (U_c)_{U_a = \text{const}} \]
---- статические анодно-сеточные характеристики, которые представлены на рис.3. 
+--- статические анодно-сеточные характеристики.
 \[ I_a = f_2 (U_a)_{U_c = \text{const}}\]
---- статические анодные характеристики, изображенные на рис.4.
+--- статические анодные характеристики.
 
 При увеличении \( U_a \) анодно-сеточные характеристики смещаются влево. То же происходит с анодными характеристиками при увеличении \( U_c \).
 
 Анодный ток \( I_a \) меняется нелинейно как с изменением \( U_c \), так и с изменением \( U_a \). Параметры 
-\[\begin{aligned}
-	S = \frac{\partial I_a}{\partial U_c} = \left[ \frac{d I_a}{d U_c} \right]_{U_a = \text{const}} && \text{и} && R_i = \frac{\partial U_a}{\partial I_a} = \left[ \frac{\partial U_a}{\partial I_a} \right]_{U_c = \text{const}}
-\end{aligned}\]
+\begin{align} \label{eq:2.1}
+	\begin{aligned}
+		S = \frac{\partial I_a}{\partial U_c} = \left[ \frac{d I_a}{d U_c} \right]_{U_a = \text{const}} && \text{и} && R_i = \frac{\partial U_a}{\partial I_a} = \left[ \frac{\partial U_a}{\partial I_a} \right]_{U_c = \text{const}}
+	\end{aligned}
+\end{align}
 по аналогии с диодом называются соответственно крутизной и внутренним сопротивлением триода.
 
 Крутизна характеристики графически может быть определена как тангенс угла наклона касательной к сеточной характеристике в данной точке. Из-за нелинейности сеточной характеристики значение крутизны в каждой точке характеристики различно.
@@ -55,9 +57,52 @@
 
 Если \( U_c \) и \( U_a \) изменять так, чтобы анодный ток \( I_a \) оставался постоянным, т.~е. \( dI_a = 0 \), то, учитывая, что изменения сеточного и анодного напряжения при этом различного знака, получим
 \[0 = \frac{\partial I_a}{\partial U_c} - \frac{\partial I_a}{\partial U_a} \left[\frac{d U_a}{U_c}\right]_{I_a = \text{const}} \quad \to \quad S= \frac{1}{R_i} \mu \quad \mu = \left( \frac{\partial U_a}{\partial U_c} \right)_{I_a = \text{const}}, \]
-где $\mu$ --- статический коэффициент усиления.
+где $\mu$ --- статический коэффициент усиления, показывающий во сколько раз действие изменения напряжения на сетке \( U_c \) эффективнее действия такого же изменения напряжения на аноде \( U_a \).
 
-\newpage
+Величина, обратная коэффициенту усиления, которой удобно пользоваться в некоторых случаях, носит название проницаемости лампы и обозначается буквой \( D \): 
+\[
+D = \frac{1}{\mu}
+\]
+
+Таким образом, используя соотношения \( S R_i = \mu \) или \( S R_i D = 1 \), по двум известным параметрам всегда можно найти третий. Эти соотношения справедливы не только для триодов, но и для более сложных электронных ламп, имеющих большое количество электродов.
+
+Из-за того, что сетка гораздо ближе к катоду, чем анод, управляющее действие ее на поток электронов сильнее. Если между сеткой и катодом приложено переменное напряжение, а в анодную цепь лампы включено сопротивление, то анодный ток будет меняться, следуя за изменением напряжения на сетке. Изменение анодного тока приводит к изменению напряжения на сопротивлении в анодной цепи. Таким образом, меняя напряжение на сетке, можно управлять мощностью, выделяемой в анодной цепи, не расходуя никакой энергии в сеточной цепи (если, конечно, мгновенное значение сеточного напряжения всегда отрицательно). Источником энергии при этом является анодная батарея. Это свойство триода позволяет использовать его для усиления и для генерации электрических колебаний.
+
+Упрощенная схема усилительного каскада приведена на рис. 5. Источник \( E_c \) носит название источника сеточного смещения и служит для задания так называемой рабочей точки на анодно-сеточной характеристике (точка \( P \) на рис. 3). Необходимо отметить, что анодно-сеточная характеристика при \( R_a \neq 0 \) будет отличаться от статической анодно-сеточной характеристики, т.к. при изменении \( I_a \) будет меняться напряжение на аноде лампы (\( U_a = E_a - I_a R_a \)). Такая характеристика, называется динамической.
+
+Как и в статическом режиме, управляющее действие сетки при работе лампы с нагрузкой характеризуется крутизной
+\[
+S_d = \frac{dI_a}{dU_c}
+\]
+
+но в отличие от статической эта крутизна определяется при изменяющемся напряжении на аноде. Нетрудно показать, что динамическая крутизна связана со статической соотношением
+\[
+S_d = \frac{S}{1 + R_a / R_i}
+\]
+
+Усиление сигнала, обеспечиваемое лампой, характеризуется динамическим коэффициентом усиления \( K \), равным отношению амплитуды переменного напряжения на сопротивлении нагрузки \( U_{m_a} \) к амплитуде напряжения на сетке \( U_{m_c} \):
+\[
+K = \frac{U_{m_a}}{U_{m_c}}
+\]
+
+Выразим его через статические параметры лампы. Для этой цели запишем коэффициент усиления в виде
+\[
+K = \frac{dU_a}{dU_c}
+\]
+
+заменив амплитуды бесконечно малыми приращениями, что в линейном режиме допустимо, и учитывая также, что \( dU_a = -R_a dI_a \), получим 
+\[
+K = - \frac{R_a dI_a}{dU_c} = -R_a S_\text{д} = -\frac{R_a S}{1 + R_a / R_i} = \frac{\mu}{1 + R_i / R_a},
+\]
+
+Из этой формулы следует, что динамический коэффициент усиления тем больше, чем больше \( R_a \), и \( K \to \mu \) при \( R_a \to \infty \). На практике же при больших значениях \( R_a / R_i \) дальнейшее увеличение \( R_a \) может не дать никакого роста \( K \). Дело в том, что увеличение \( R_a \) при постоянном \( E_a \) приводит к смещению рабочей точки на динамической анодно-сеточной характеристике ближе к излому, где \( R_i \) возрастает, а \( \mu \) уменьшается. Практически в усилителях на триодах \( R_a / R_i \) лежит в пределах 2–5.
+
+С ростом частоты усиливаемого сигнала усилительные свойства триода ухудшаются. Это связано, в основном, с влиянием междуэлектродных емкостей и индуктивностей вводов лампы. Особенно сильное влияние на частотные свойства триода оказывает емкость между сеткой и анодом, которую называют проходной емкостью \( C_{a-c} \). В курсе электроники доказывается, что предельная частота, до которой триод может быть использован как усилитель при заданном коэффициенте усиления \( K \), определяется выражением:
+
+\[
+f_{\text{пр}} = 25 \frac{S}{K^2 C_{ac}}, \quad [\text{МГц}]
+\]
+где \( S \) --– в мА/В, \( C_{a-c} \) --– в пФ.
 
 \subsection{Вывод закона 3/2 Ленгмюра}
 Определим зависимость анодного тока от анодного напряжения в диоде, образованном двумя плоскими, безграничными, параллельными друг другу пластинами. В этом случае можно пренебречь краевым эффектом и считать поле между анодом и катодом однородным. Примем следующие допущения. Пусть у поверхности катода $x = 0: U_k = 0$, , начальная скорость электронов $u_0 = 0$.
@@ -72,7 +117,7 @@
 	\frac{\partial E}{\partial x} = - \frac1{\mathcal{E}_0} e n
 \end{align}
 
-Знак минус учитывает, что эмиттируемые электроны имеют отрицательный заряд, $\mathcal{E}_0$ --- электрическая постоянная, $n$ --- концентрация электронов, $E$ --- напряжённость электрического поля. 
+Знак минус учитывает, что эмитируемые электроны имеют отрицательный заряд, $\mathcal{E}_0$ --- электрическая постоянная, $n$ --- концентрация электронов, $E$ --- напряжённость электрического поля. 
 
 Работа по перемещению единичного точечного положительного заряда из одной точки поля в другую вдоль оси $x$ при условии, что точки расположены бесконечно близко друг к другу $x_2 - x_1 = dx$, равна $E_x dx$. Та же работа равна $\phi_1 - \phi_2 = -dU$. Приравняв оба выражения, можем записать:
 \begin{align} \label{Langmuir-ur2}
@@ -202,22 +247,22 @@
 \end{align}
 где $I$ и $dI$ -- получаемый ток и цена деления измерения прибора.
 
-\subsubsection{Косвенная погрешность крутизны S}
+\subsubsection{Косвенная погрешность крутизны S диода}
 
-Выведем формулу косвенной погрешности крутизны из формулы \cref{eq:2}:
+Выведем формулу косвенной погрешности крутизны диода из формулы \cref{eq:2}:
 \[S = \frac{\Delta I_a}{\Delta U_a} = \frac{I_{a_2} - I_{a_1}}{U_{a_2} - U_{a_1}}\]  
 \begin{align} \label{eq:error:3.1}
 	\Delta S = \sqrt{\left( \frac{\partial S}{\partial I_{a_1}} \Delta I_{a_1}\right)^2 + \left( \frac{\partial S}{\partial I_{a_2}} \Delta I_{a_2}\right)^2 + \left( \frac{\partial S}{\partial U_{a_1}} \Delta U_{a_1}\right)^2 + \left( \frac{\partial S}{\partial U_{a_2}} \Delta U_{a_2}\right)^2}
 \end{align}
 \begin{multline} \label{eq:error:3.2}
-	\Delta S =\\= \sqrt{\frac{\Delta I_{a_1}^2}{(U_{a_2} - U_{a_1})^2} + \frac{\Delta I_{a_2}^2}{(U_{a_2} - U_{a_1})^2} + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_1}^2 + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_2}^2} = \\ = \boxed{\frac{\sqrt{(\Delta I_{a_1}^2 + \Delta I_{a_2}^2)(U_{a_2} - U_{a_1})^2 + (\Delta U_{a_1}^2 + \Delta U_{a_2}^2)(I_{a_2} - I_{a_1})^2}}{(U_{a_2} - U_{a_1})^2}}
+	\Delta S = \sqrt{\frac{\Delta I_{a_1}^2}{(U_{a_2} - U_{a_1})^2} + \frac{\Delta I_{a_2}^2}{(U_{a_2} - U_{a_1})^2} + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_1}^2 + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_2}^2} = \\ = \boxed{\frac{\sqrt{(\Delta I_{a_1}^2 + \Delta I_{a_2}^2)(U_{a_2} - U_{a_1})^2 + (\Delta U_{a_1}^2 + \Delta U_{a_2}^2)(I_{a_2} - I_{a_1})^2}}{(U_{a_2} - U_{a_1})^2}}
 \end{multline}
 
 \subsubsection{Приборная погрешность генератора низкочастотных сигналов ГЗ-112}
 
 Относительная приборная погрешность ГЗ-112 при создании сигнала $\nu$:
 \begin{align} \label{eq:error:4.1}
-	\Delta \nu_\text{пр} = \pm (2 + \frac{30}{\nu_\text{уст}})\%
+	\Delta \nu_\text{пр} = \pm \left(2 + \frac{30}{\nu_\text{уст}}\right)\%
 \end{align}
 где $\nu_\text{уст}$ --- значение, установленное на шкале регулятора частоты. Распишем:
 \begin{align} \label{eq:error:4.2}
@@ -228,9 +273,16 @@
 \subsubsection{Вычисление косвенной погрешности коэффициента K}
 Выведем формулу косвенной погрешности крутизны из формулы \cref{eq:pr:1}:
 \[K = \frac{2 U_\text{вых}}{2 U_\text{вх}}\]
-\begin{equation} \label{eq:error:5.1}
-	\Delta K = \sqrt{\left( \frac{\partial K}{\partial 2 U_\text{вых}} \Delta 2U_\text{вых} \right)^2 + \left(\frac{\partial K}{\partial 2U_\text{вх}} \Delta 2U_\text{вх}\right)^2}
-\end{equation}
-\begin{align} \label{eq:error:5.2}
-	\Delta K = \sqrt{\frac{\Delta (2U_\text{вых})^2}{(2U_\text{вх})^2} + \frac{(2U_\text{вых})^2 \Delta (2U_\text{вх})^2}{(2U_\text{вх})^4}}
+\begin{multline} \label{eq:error:5.1}
+	\Delta K = \sqrt{\left( \frac{\partial K}{\partial 2 U_\text{вых}} \Delta 2U_\text{вых} \right)^2 + \left(\frac{\partial K}{\partial 2U_\text{вх}} \Delta 2U_\text{вх}\right)^2} =\\= \sqrt{\frac{\Delta (2U_\text{вых})^2}{(2U_\text{вх})^2} + \frac{(2U_\text{вых})^2 \Delta (2U_\text{вх})^2}{(2U_\text{вх})^4}}
+\end{multline}
+
+\subsubsection{Вычисление косвенной погрешности статической крутизны триода}
+Выведем формулу косвенной погрешности статической крутизны из формулы \cref{eq:2.1}:
+\begin{align} \label{eq:error:6.1}
+	\Delta S = \sqrt{\left( \frac{\partial S}{\partial I_{a_1}} \Delta I_{a_1}\right)^2 + \left( \frac{\partial S}{\partial I_{a_2}} \Delta I_{a_2}\right)^2 + \left( \frac{\partial S}{\partial U_{c_1}} \Delta U_{c_1}\right)^2 + \left( \frac{\partial S}{\partial U_{c_2}} \Delta U_{c_2}\right)^2}
 \end{align}
+\begin{multline} \label{eq:error:6.2}
+	\Delta S = \sqrt{\frac{\Delta I_{a_1}^2}{(U_{c_2} - U_{c_1})^2} + \frac{\Delta I_{a_2}^2}{(U_{c_2} - U_{c_1})^2} + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{c_2} - U_{c_1})^4} \Delta U_{c_1}^2 + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{c_2} - U_{c_1})^4} \Delta U_{c_2}^2} = \\ = \boxed{\frac{\sqrt{(\Delta I_{a_1}^2 + \Delta I_{a_2}^2)(U_{c_2} - U_{c_1})^2 + (\Delta U_{c_1}^2 + \Delta U_{c_2}^2)(I_{a_2} - I_{a_1})^2}}{(U_{c_2} - U_{c_1})^2}}
+\end{multline}
+
