--- a/source/practice/4_grid_characteristics.tex
+++ b/source/practice/4_grid_characteristics.tex
@@ -2,23 +2,32 @@
 
 \begin{figure}[p]
 	\centering
-	\label{fig:4}
 	\includegraphics[width=\linewidth]{graph/graph_4}
 	\caption{Снятие анодно-сеточной характеристики}
+	\label{fig:4}
 \end{figure}
 
-Были сняты 3 анодно-сеточных характеристик для разных напряжений на аноде: 60, 80, 100 В (см. \cref{tab:6}).
-\begin{table}[H]
+Были сняты три анодно-сеточные характеристики для различных фиксированных значений анодного напряжения: 60, 80 и 100 В (см. \cref{tab:6}). График представлен на \cref{fig:4}.
+При снятии характеристик изменялось напряжение на сетке \(U_c\) в широком диапазоне — от отрицательных значений, запирающих лампу, до положительных.
+
+Измерения проводились с учётом предельной допустимой мощности \(P_{\text{max}} = 2{,}5\ \text{Вт}\), поэтому ток \(I_a\) не превышал значений, указанных в \cref{tab:max_current}.
+
+\begin{table}[h]
 	\centering
-	\caption{Анодно-сеточная характеристика триода}
+	\caption{Анодно-сеточная характеристика триода и погрешности измерений}
 	\label{tab:6}
-	\begin{subtable}{0.3\textwidth}
+	\setlength{\tabcolsep}{2pt}
+	
+	% Первый блок: Ua = 60 В
+	\begin{subtable}{0.31\textwidth}
 		\centering
 		\caption{\(U_a = 60~\text{В}\)}
 		\label{tab:6a}
-		\begin{tabular}{cc}
+		\begin{tabular}{@{}cc@{}}
 			\toprule
-			$U_c,~\text{В}$ & $I_a,~\text{мА}$ \\ \midrule
+			\(U_c\) & \(I_a\) \\ 
+			(В)     & (мА)    \\
+			\midrule
 			--      & --       \\
 			--      & --       \\
 			--      & --       \\
@@ -42,14 +51,45 @@
 			4,47    & 18,90   \\
 			\bottomrule
 		\end{tabular}
+		\begin{tabular}{@{}cc@{}}
+			\toprule
+			\(\Delta U_c\) & \(\Delta I_a\) \\ 
+			(В)           & (мА)          \\
+			\midrule
+			--      & --       \\
+			--      & --       \\
+			--      & --       \\
+			--      & --       \\
+			--      & --       \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,30    & 0,02     \\
+			0,30    & 0,02     \\
+			0,30    & 0,02     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,31    & 0,03     \\
+			0,31    & 0,03    \\
+			\bottomrule
+		\end{tabular}
 	\end{subtable}
-	\begin{subtable}{0.3\textwidth}
+	\hfill
+	\begin{subtable}{0.31\textwidth}
 		\centering
 		\caption{\(U_a = 80~\text{В}\)}
 		\label{tab:6b}
-		\begin{tabular}{cc}
+		\begin{tabular}{@{}cc@{}}
 			\toprule
-			$U_c,~\text{В}$ & $I_a,~\text{мА}$ \\ \midrule
+			\(U_c\) & \(I_a\) \\ 
+			(В)     & (мА)    \\
+			\midrule
 			--      & --       \\
 			--      & --       \\
 			-4,53   & 0,37     \\
@@ -73,14 +113,45 @@
 			4,51    & 22,75   \\
 			\bottomrule
 		\end{tabular}
+		\begin{tabular}{@{}cc@{}}
+			\toprule
+			\(\Delta U_c\) & \(\Delta I_a\) \\ 
+			(В)           & (мА)          \\
+			\midrule
+			--      & --       \\
+			--      & --       \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,31    & 0,03     \\
+			0,31    & 0,03     \\
+			0,31    & 0,03    \\
+			\bottomrule
+		\end{tabular}
 	\end{subtable}
-	\begin{subtable}{0.3\textwidth}
+	\hfill
+	\begin{subtable}{0.31\textwidth}
 		\centering
 		\caption{\(U_a = 100~\text{В}\)}
 		\label{tab:6c}
-		\begin{tabular}{cc}
+		\begin{tabular}{@{}cc@{}}
 			\toprule
-			$U_c,~\text{В}$ & $I_a,~\text{мА}$ \\ \midrule
+			\(U_c\) & \(I_a\) \\ 
+			(В)     & (мА)    \\
+			\midrule
 			-5,55   & 0,53     \\
 			-4,97   & 0,87     \\
 			-4,54   & 1,28     \\
@@ -104,7 +175,129 @@
 			--      & --      \\
 			\bottomrule
 		\end{tabular}
+		\begin{tabular}{@{}cc@{}}
+			\toprule
+			\(\Delta U_c\) & \(\Delta I_a\) \\ 
+			(В)           & (мА)          \\
+			\midrule
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,29    & 0,02     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,30    & 0,03     \\
+			0,31    & 0,03     \\
+			--      & --       \\
+			--      & --      \\
+			\bottomrule
+		\end{tabular}
 	\end{subtable}
 \end{table}
 
-Для каждой из характеристик подсчитали коэффициент
+Для каждой характеристики был вычислен статический коэффициент крутизны \(S\) по формуле:
+
+\[
+S = \frac{\Delta I_a}{\Delta U_c},
+\]
+
+где \(\Delta I_a\) и \(\Delta U_c\) — приращения тока и напряжения на соседних точках характеристики.  
+Также были рассчитаны внутреннее сопротивление \(R_i\) и статический коэффициент усиления \(\mu\) по формулам:
+
+\[
+R_i = \frac{\Delta U_a}{\Delta I_a}, \quad \mu = S \cdot R_i.
+\]
+
+Погрешности \(\Delta S\), \(\Delta R_i\) и \(\Delta \mu\) вычислялись методом переноса погрешностей на основе приборных погрешностей измерений напряжения и тока.  
+Результаты расчётов представлены в \cref{tab:triode_params_grid_long}.
+
+\begin{center}
+	\captionof{table}{Параметры триода для анодно-сеточных характеристик}
+	\label{tab:triode_params_grid_long}
+\end{center}
+\begin{longtable}{@{}ccccccccc@{}}
+	\toprule
+	\(U_a\), В & \(U_c\) интервал & \(S\), мА/В & \(\Delta S\), мА/В & \(R_i\), кОм & \(\Delta R_i\), кОм & \(\mu\) & \(\Delta \mu\) \\ 
+	\midrule
+	\endfirsthead
+	
+	\toprule
+	\(U_a\), В & \(U_c\) интервал & \(S\), мА/В & \(\Delta S\), мА/В & \(R_i\), кОм & \(\Delta R_i\), кОм & \(\mu\) & \(\Delta \mu\) \\ 
+	\midrule
+	\endhead
+	
+	\midrule
+	\multicolumn{9}{r}{Продолжение на следующей странице} \\
+	\endfoot
+	
+	\bottomrule
+	\endlastfoot
+	
+	60 & \(-3,16 \to -2,38\) & 1,04 & 0,47 & 8,33 & 0,83 & 8,66 & 3,94 \\
+	60 & \(-2,38 \to -2,04\) & 1,59 & 0,71 & 8,33 & 0,83 & 13,24 & 5,95 \\
+	60 & \(-2,04 \to -1,54\) & 1,86 & 0,83 & 8,33 & 0,83 & 15,49 & 6,96 \\
+	60 & \(-1,54 \to -1,09\) & 2,18 & 0,97 & 8,33 & 0,83 & 18,16 & 8,18 \\
+	60 & \(-1,09 \to -0,55\) & 2,59 & 1,15 & 8,33 & 0,83 & 21,57 & 9,71 \\
+	60 & \(-0,55 \to 0,08\)  & 2,60 & 1,16 & 8,33 & 0,83 & 21,66 & 9,74 \\
+	60 & \(0,08 \to 0,52\)  & 2,50 & 1,11 & 8,33 & 0,83 & 20,82 & 9,36 \\
+	60 & \(0,52 \to 1,02\)  & 2,52 & 1,12 & 8,33 & 0,83 & 20,99 & 9,44 \\
+	60 & \(1,02 \to 1,57\)  & 2,62 & 1,17 & 8,33 & 0,83 & 21,82 & 9,81 \\
+	60 & \(1,57 \to 2,04\)  & 2,66 & 1,18 & 8,33 & 0,83 & 22,16 & 9,97 \\
+	60 & \(2,04 \to 2,54\)  & 2,72 & 1,21 & 8,33 & 0,83 & 22,66 & 10,19 \\
+	60 & \(2,54 \to 3,04\)  & 2,82 & 1,25 & 8,33 & 0,83 & 23,49 & 10,57 \\
+	60 & \(3,04 \to 3,57\)  & 2,89 & 1,29 & 8,33 & 0,83 & 24,08 & 10,83 \\
+	60 & \(3,57 \to 4,08\)  & 3,03 & 1,35 & 8,33 & 0,83 & 25,24 & 11,35 \\
+	60 & \(4,08 \to 4,47\)  & 3,08 & 1,37 & 8,33 & 0,83 & 25,66 & 11,54 \\ \midrule
+	
+	80 & \(-4,53 \to -4,00\) & 0,68 & 0,31 & 7,19 & 0,72 & 4,89 & 2,35 \\
+	80 & \(-4,00 \to -3,52\) & 0,98 & 0,44 & 7,19 & 0,72 & 7,04 & 3,18 \\
+	80 & \(-3,52 \to -3,08\) & 1,32 & 0,59 & 7,19 & 0,72 & 9,49 & 4,27 \\
+	80 & \(-3,08 \to -2,50\) & 1,72 & 0,76 & 7,19 & 0,72 & 12,37 & 5,56 \\
+	80 & \(-2,50 \to -2,00\) & 2,04 & 0,91 & 7,19 & 0,72 & 14,67 & 6,59 \\
+	80 & \(-2,00 \to -1,54\) & 2,52 & 1,12 & 7,19 & 0,72 & 18,12 & 8,15 \\
+	80 & \(-1,54 \to -0,95\) & 2,44 & 1,09 & 7,19 & 0,72 & 17,54 & 7,89 \\
+	80 & \(-0,95 \to -0,57\) & 3,16 & 1,40 & 7,19 & 0,72 & 22,72 & 10,22 \\
+	80 & \(-0,57 \to 0,06\)  & 3,02 & 1,34 & 7,19 & 0,72 & 21,71 & 9,77 \\
+	80 & \(0,06 \to 0,52\)  & 2,78 & 1,24 & 7,19 & 0,72 & 19,99 & 8,99 \\
+	80 & \(0,52 \to 0,98\)  & 2,91 & 1,30 & 7,19 & 0,72 & 20,92 & 9,41 \\
+	80 & \(0,98 \to 1,50\)  & 2,64 & 1,17 & 7,19 & 0,72 & 18,98 & 8,54 \\
+	80 & \(1,50 \to 2,13\)  & 2,94 & 1,31 & 7,19 & 0,72 & 21,14 & 9,51 \\
+	80 & \(2,13 \to 2,53\)  & 2,95 & 1,31 & 7,19 & 0,72 & 21,21 & 9,54 \\
+	80 & \(2,53 \to 2,99\)  & 3,04 & 1,35 & 7,19 & 0,72 & 21,86 & 9,83 \\
+	80 & \(2,99 \to 3,50\)  & 3,12 & 1,39 & 7,19 & 0,72 & 22,43 & 10,09 \\
+	80 & \(3,50 \to 4,02\)  & 3,19 & 1,42 & 7,19 & 0,72 & 22,93 & 10,32 \\
+	80 & \(4,02 \to 4,51\)  & 3,18 & 1,42 & 7,19 & 0,72 & 22,86 & 10,29 \\ \midrule
+	
+	100 & \(-5,55 \to -4,97\) & 0,59 & 0,26 & 6,49 & 0,65 & 3,83 & 1,82 \\
+	100 & \(-4,97 \to -4,54\) & 0,95 & 0,43 &	 6,49 & 0,65 & 6,17 & 2,78 \\
+	100 & \(-4,54 \to -4,03\) & 1,25 & 0,56 & 6,49 & 0,65 & 8,11 & 3,64 \\
+	100 & \(-4,03 \to -3,50\) & 1,62 & 0,72 & 6,49 & 0,65 & 10,51 & 4,73 \\
+	100 & \(-3,50 \to -3,10\) & 1,93 & 0,86 & 6,49 & 0,65 & 12,53 & 5,64 \\
+	100 & \(-3,10 \to -2,53\) & 2,16 & 0,96 & 6,49 & 0,65 & 14,02 & 6,31 \\
+	100 & \(-2,53 \to -2,04\) & 2,67 & 1,19 & 6,49 & 0,65 & 17,33 & 7,79 \\
+	100 & \(-2,04 \to -1,50\) & 2,94 & 1,31 & 6,49 & 0,65 & 19,08 & 8,58 \\
+	100 & \(-1,50 \to -1,05\) & 2,98 & 1,33 & 6,49 & 0,65 & 19,34 & 8,70 \\
+	100 & \(-1,05 \to -0,55\) & 3,16 & 1,41 & 6,49 & 0,65 & 20,51 & 9,23 \\
+	100 & \(-0,55 \to 0,11\)  & 3,24 & 1,44 & 6,49 & 0,65 & 21,03 & 9,46 \\
+	100 & \(0,11 \to 0,51\)  & 3,08 & 1,37 & 6,49 & 0,65 & 19,99 & 8,99 \\
+	100 & \(0,51 \to 1,07\)  & 3,02 & 1,34 & 6,49 & 0,65 & 19,60 & 8,82 \\
+	100 & \(1,07 \to 1,48\)  & 2,99 & 1,33 & 6,49 & 0,65 & 19,41 & 8,73 \\
+	100 & \(1,48 \to 2,09\)  & 3,11 & 1,38 & 6,49 & 0,65 & 20,19 & 9,08 \\
+	100 & \(2,09 \to 2,55\)  & 3,20 & 1,42 & 6,49 & 0,65 & 20,77 & 9,34 \\
+	100 & \(2,55 \to 3,07\)  & 3,15 & 1,40 & 6,49 & 0,65 & 20,44 & 9,20 \\
+	100 & \(3,07 \to 3,52\)  & 3,18 & 1,42 & 6,49 & 0,65 & 20,64 & 9,29 \\
+	
+\end{longtable}
+
+При повышении анодного напряжения \(U_a\) характеристики смещаются влево, что усиливает управляющее действие сетки. Крутизна \(S\) возрастает с ростом \(U_c\) и \(U_a\), отражая нелинейность анодно-сеточных характеристик. Внутреннее сопротивление \(R_i\) уменьшается при увеличении \(U_a\), так как лампа становится более проводимой. Статический коэффициент усиления \(\mu\) также растёт с \(U_a\), достигая значений порядка 20–25 при \(U_a = 100\ \text{В}\). Погрешности параметров выше в области малых токов из-за малых приращений тока и влияния приборных погрешностей. 
