--- a/source/practice/5_amplifier_frequency_response_measurement.tex
+++ b/source/practice/5_amplifier_frequency_response_measurement.tex
@@ -31,26 +31,26 @@
 		90 & $10^4$ & 900 & 0,240 & 1,20 \\
 		\bottomrule
 	\end{tabular}
-	\begin{tabular}{cc}
+	\begin{tabular}{c}
 		\toprule
-		$\Delta \nu,~\text{кГц}$ & $\Delta K$\\
+		$\Delta \nu,~\text{кГц}$ \\
 		\midrule
-		0,1 &  	\\
-		0,7 &  	\\
-		1,1 &  	\\
-		1,3 &  	\\
-		1,7 &  	\\
-		2,1 &  	\\
-		5,4 &  	\\
-		5,8 &  	\\
-		6,6 &  	\\
-		7,6 &  	\\
-		8,4 &  	\\
-		13,0 & 	\\
-		15,0 & 	\\
-		17,0 & 	\\
-		19,0 & 	\\
-		21,0 & 	\\
+		0,1 \\
+		0,7 \\
+		1,1 \\
+		1,3 \\
+		1,7 \\
+		2,1 \\
+		5,4 \\
+		5,8 \\
+		6,6 \\
+		7,6 \\
+		8,4 \\
+		13,0 \\
+		15,0 \\
+		17,0 \\
+		19,0 \\
+		21,0 \\
 		\bottomrule
 	\end{tabular}
 \end{table}
