--- a/source/practice/6_dependence_of_gain_on_load_resistance.tex
+++ b/source/practice/6_dependence_of_gain_on_load_resistance.tex
@@ -2,92 +2,118 @@
 
 Для каждой из характеристик подсчитали коэффициент крутизны $S$ на линейном участке графика.
 
-\begin{table}{p}
-	\centering
-	\caption{Зависимость $K$ от частоты $\nu$, при $R_a = 50~\text{кОм}$}
-	\label{tab:7}
-	\begin{tabular}{cc}
-			\toprule
-			$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ \\ 
-			\midrule
-		\end{tabular}
-\end{table}
-
-\begin{table}[p]
+\begin{table}[H]
 	\centering
 	\caption{Зависимость $K$ от сопротивления нагрузки $R_a$ при частоте $\nu=1~\text{кГц}$}
 	\label{tab:7}
 	\begin{tabular}{ccc}
-			\toprule
-			$R,~\text{кОм}$ & $2U_\text{вых},~\text{В}$ & $K$  \\ \midrule
-			0,5             & 0,182                     & 0,9  \\
-			1,0             & 0,348                     & 1,7  \\
-			2,0             & 0,640                     & 3,2  \\
-			5,0             & 1,230                     & 6,2  \\
-			10,0            & 1,900                     & 9,5  \\
-			20,0            & 2,540                     & 12,7 \\
-			50,0            & 3,200                     & 16,0 \\
-			100,0           & 3,560                     & 17,8 \\
-			200,0           & 3,720                     & 18,6 \\
-			500,0           & 3,600                     & 18,0 \\
-			1000,0          & 3,360                     & 16,8 \\
-			\bottomrule
-		\end{tabular}
+		\toprule
+		$R,~\text{кОм}$ & $2U_\text{вых},~\text{В}$ & $K$  \\ \midrule
+		0,5             & 0,182                     & 0,9  \\
+		1,0             & 0,348                     & 1,7  \\
+		2,0             & 0,640                     & 3,2  \\
+		5,0             & 1,230                     & 6,2  \\
+		10,0            & 1,900                     & 9,5  \\
+		20,0            & 2,540                     & 12,7 \\
+		50,0            & 3,200                     & 16,0 \\
+		100,0           & 3,560                     & 17,8 \\
+		200,0           & 3,720                     & 18,6 \\
+		500,0           & 3,600                     & 18,0 \\
+		1000,0          & 3,360                     & 16,8 \\
+		\bottomrule
+	\end{tabular}
 \end{table}
 
-\begin{table}[p]
+\begin{table}[H]
 	\centering
 	\caption{Зависимость $K$ от частоты $\nu$ ($U_a = 100~\text{В}$)}
 	\label{tab:8}
 	\begin{subtable}{0.45\textwidth}
-			\centering
-			\caption{$R=1~\text{кОм}$}
-			\label{tab:8a}
-			\begin{tabular}{ccc}
-					\toprule
-					$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ & $K$  \\\midrule
-					1                 & 0,360                     & 1,80 \\
-					20                & 0,352                     & 1,76 \\
-					40                & 0,356                     & 1,78 \\
-					50                & 0,348                     & 1,74 \\
-					70                & 0,352                     & 1,76 \\
-					90                & 0,352                     & 1,76 \\
-					120               & 0,352                     & 1,76 \\
-					140               & 0,352                     & 1,76 \\
-					180               & 0,344                     & 1,72 \\
-					230               & 0,344                     & 1,72 \\
-					270               & 0,336                     & 1,68 \\
-					500               & 0,308                     & 1,54 \\
-					600               & 0,288                     & 1,44 \\
-					700               & 0,272                     & 1,36 \\
-					800               & 0,254                     & 1,27 \\
-					900               & 0,240                     & 1,20 \\ \bottomrule
-				\end{tabular}
-		\end{subtable}
+		\centering
+		\caption{$R=1~\text{кОм}$}
+		\label{tab:8a}
+		\begin{tabular}{ccc}
+			\toprule
+			$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ & $K$  \\\midrule
+			1                 & 0,360                     & 1,80 \\
+			20                & 0,352                     & 1,76 \\
+			40                & 0,356                     & 1,78 \\
+			50                & 0,348                     & 1,74 \\
+			70                & 0,352                     & 1,76 \\
+			90                & 0,352                     & 1,76 \\
+			120               & 0,352                     & 1,76 \\
+			140               & 0,352                     & 1,76 \\
+			180               & 0,344                     & 1,72 \\
+			230               & 0,344                     & 1,72 \\
+			270               & 0,336                     & 1,68 \\
+			500               & 0,308                     & 1,54 \\
+			600               & 0,288                     & 1,44 \\
+			700               & 0,272                     & 1,36 \\
+			800               & 0,254                     & 1,27 \\
+			900               & 0,240                     & 1,20 \\ \bottomrule
+		\end{tabular}
+	\end{subtable}
 	\begin{subtable}{0.45\linewidth}
-			\centering
-			\caption{$R=50~\text{кОм}$}
-			\label{tab:8b}
-			\begin{tabular}{ccc}
-					\toprule
-					$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ & $K$   \\ \midrule
-					1                 & 3,240                     & 16,20 \\
-					20                & 3,140                     & 15,70 \\
-					40                & 2,840                     & 14,20 \\
-					50                & 2,640                     & 13,20 \\
-					70                & 2,340                     & 11,70 \\
-					90                & 2,000                     & 10,00 \\
-					120               & 1,680                     & 8,40  \\
-					140               & 1,480                     & 7,40  \\
-					180               & 1,200                     & 6,00  \\
-					230               & 0,984                     & 4,92  \\
-					270               & 0,848                     & 4,24  \\
-					500               & 0,464                     & 2,32  \\
-					600               & 0,388                     & 1,94  \\
-					700               & 0,336                     & 1,68  \\
-					800               & 0,288                     & 1,44  \\
-					900               & 0,260                     & 1,30 \\
-					\bottomrule
-				\end{tabular}
-		\end{subtable}
+		\centering
+		\caption{$R=50~\text{кОм}$}
+		\label{tab:8b}
+		\begin{tabular}{ccc}
+			\toprule
+			$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ & $K$   \\ \midrule
+			1                 & 3,240                     & 16,20 \\
+			20                & 3,140                     & 15,70 \\
+			40                & 2,840                     & 14,20 \\
+			50                & 2,640                     & 13,20 \\
+			70                & 2,340                     & 11,70 \\
+			90                & 2,000                     & 10,00 \\
+			120               & 1,680                     & 8,40  \\
+			140               & 1,480                     & 7,40  \\
+			180               & 1,200                     & 6,00  \\
+			230               & 0,984                     & 4,92  \\
+			270               & 0,848                     & 4,24  \\
+			500               & 0,464                     & 2,32  \\
+			600               & 0,388                     & 1,94  \\
+			700               & 0,336                     & 1,68  \\
+			800               & 0,288                     & 1,44  \\
+			900               & 0,260                     & 1,30 \\
+			\bottomrule
+		\end{tabular}
+	\end{subtable}
 \end{table}
+
+Заметим, что при $R = 50~\text{кОм}$ (см \cref{tab:8b}) коэффициент $K$ падает в $2$ раза при частоте  между $\nu = 120~\text{кГц}$ и $\nu = 140~\text{кГц}$
+
+Построим график зависимости коэффициента усиления от сопротивления нагрузки $K(R_a)$ по \cref{tab:7}
+
+%%%
+\begin{figure}[H]
+	\centering
+	\label{fig:5}
+	\includegraphics[width=\linewidth]{graph/graph_5}
+	\caption{Зависимость коэффициента усиления $K$ от сопротивления $R_a$}
+\end{figure}
+%\includegraphics[width=\linewidth]{graph/graph_5}
+%%%
+
+Погрешности $U_\text{вых}$ мы находим из фотографий измерений с помощью осциллографа. Погрешность $R$ возьмём из документации к установке.
+
+Максимальный коэффициент усиления достигается при $R_a = 200~\text{кОм}$ и равен $18,6$, далее рост усиления прекращается и наблюдается спад усиления. Это соответствует тому, что при увеличении $R_a$ рабочая точка на динамической анодно-сеточной характеристике смещается ближе к основанию, где $R_i$ возрастает, а  уменьшается
+
+Из формулы \cref{eq:link:8} следует, что динамический коэффициент не может превзойти статический. Практически динамический коэффициент оказался меньше статического примерно в два раза.
+
+Построим графики зависимости $K$ от частоты сигнала $\nu$ по \cref{tab:8a} и \cref{tab:8b}.
+
+Из графиков видно, что падение коэффициента усиления, по мере увеличения частоты сигнала, происходит быстрее при более высоком сопротивлении.
+
+\begin{figure}[H]
+	\centering
+	\label{fig:6}
+	\includegraphics[width=\linewidth]{graph/graph_6}
+	\caption{Зависимость коэффициента усиления от частоты входного сигнала при $R=50~\text{кОм}$}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\label{fig:7}
+	\includegraphics[width=\linewidth]{graph/graph_7}
+	\caption{Зависимость коэффициента усиления от частоты входного сигнала при $R=1~\text{кОм}$}
+\end{figure}
