--- a/source/practice/4_grid_characteristics.tex
+++ b/source/practice/4_grid_characteristics.tex
@@ -12,7 +12,7 @@
 
 Измерения проводились с учётом предельной допустимой мощности \(P_{\text{max}} = 2{,}5\ \text{Вт}\), поэтому ток \(I_a\) не превышал значений, указанных в \cref{tab:max_current}.
 
-\begin{table}[h]
+\begin{table}[H]
 	\centering
 	\caption{Анодно-сеточная характеристика триода и погрешности измерений}
 	\label{tab:6}
