--- a/source/practice/5_amplifier_frequency_response_measurement.tex
+++ b/source/practice/5_amplifier_frequency_response_measurement.tex
@@ -5,6 +5,7 @@
 	K = \frac{2 U_\text{вых}}{2 U_\text{вх}} = \frac{2 U_\text{вых}}{2 \cdot 100~\text{мВ}} = \frac{2 U_\text{вых}}{0,2~\text{В}}
 \end{equation}
 
+\newpage
 \begin{table}[H]
 	\centering
 	\caption{Снятие амплитудно-частотной характеристики усилителя}
@@ -54,3 +55,4 @@
 		\bottomrule
 	\end{tabular}
 \end{table}
+\newpage
